# fuel-finder-local

./: .env.example  .gitignore  AGENTS.md  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  run.bat  run.sh
.github/workflows/: format-once.yml  quality.yml
app/: __init__.py  cache.py  config.py  currency.py  main.py  models.py  postcode.py  rate_limit.py  tankerkoenig.py
app/static/: app.js  styles.css
app/templates/: index.html
config/: exchange_rates.json
data/: postcodes_de.json
scripts/: build_postcode_dataset.py
tests/: conftest.py  test_postcode_builder.py  test_search.py  test_upstream_security.py
