[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "fuel-finder-local"
version = "1.0.0"
description = "Privacy-focused local fuel-price finder for Germany"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "FuelFinder Local contributors" }]
dependencies = [
  "fastapi==0.115.12",
  "httpx==0.28.1",
  "pydantic==2.11.4",
  "uvicorn==0.34.2",
]

[project.optional-dependencies]
test = [
  "mypy==1.15.0",
  "pytest==8.3.5",
  "pytest-asyncio==0.26.0",
  "ruff==0.11.8",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
